k8s/observability/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: https://backend.basedosdados.org/auth/
    nginx.ingress.kubernetes.io/auth-signin: https://backend.basedosdados.org/auth/login/?rd=https://$host$request_uri$is_args$args
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - grafana.basedosdados.org
    secretName: grafana-tls
  rules:
  - host: grafana.basedosdados.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
